--- a/src/app/modules/gsa-provide/views/home/home.component.html
+++ b/src/app/modules/gsa-provide/views/home/home.component.html
@@ -4,7 +4,7 @@
       <div class="bg-gsa-light-blue"  style="overflow: hidden; background-image: url(assets/images/content-art/1071030302.jpg); background-position: center top; background-size: cover; background-repeat: no-repeat;">
         <div class="jumbotron col-4 m-5 bg-gsa-medium-blue white shadow">
             <h1 class="display-4 white">
-                <b>GSA</b>&nbsp;&nbsp;|&nbsp;&nbsp;<i class="small"><b>PRO</b>vide</i>
+                <b>GSA</b>&nbsp;&nbsp;<span class="gsa-red">|</span>&nbsp;&nbsp;<i class="small"><b>PRO</b>vide</i>
             </h1>
             <p class="lead">Buy or sell a wide variety of products, supplies, equipment, and services from or to the government. </p>
             <hr class="my-4 border-bottom">
@@ -26,7 +26,7 @@
               <div class="container px-5">
               <div class="row">
                 <div class="col"> 
-                  <h4 class="gsa-medium-blue m-0 py-2 border-bottom">
+                  <h4 class="gsa-medium-blue m-0 py-2 border-bottom text-center">
                     <strong>What to buy, Where to buy, How to buy it.</strong>
                   </h4>                  
                 </div>
@@ -43,7 +43,7 @@
             <div class="col-6 col-sm-4 col-md-3 col-lg-3 mb-4">
               <div class="p-2 mb-3 h-100 text-center">  
                 <span class="gsa-red h4 ml-1">
-                    <i><strong>Advantage!</strong></i>
+                    <strong>Advantage!</strong>
                 </span>
                 <p class="small">Search and Buy from Thousands of Products</p>
                 <a class="btn btn-outline-primary btn-sm">Learn More</a>
@@ -53,7 +53,7 @@
             <div class="col-6 col-sm-4 col-md-3 col-lg-3 mb-4">
               <div class="p-2 mb-3 h-100 text-center">  
                 <span class="gsa-red h4 ml-1">
-                    <i><strong>eBuy</strong></i>
+                    <strong>eBuy</strong>
                 </span>
                 <p class="small">Request Quotes from Thousands of Services</p>
                 <a class="btn btn-outline-primary btn-sm">Learn More</a>
@@ -63,7 +63,7 @@
             <div class="col-6 col-sm-4 col-md-3 col-lg-3 mb-4">
               <div class="p-2 mb-3 h-100 text-center">  
                 <span class="gsa-red h4 ml-1">
-                    <i><strong>eLibrary</strong></i>
+                    <strong>eLibrary</strong>
                 </span>
                 <p class="small">Get the latest GSA Contract Award Information</p>
                 <a class="btn btn-outline-primary btn-sm">Learn More</a>
@@ -84,8 +84,8 @@
               <div class="container px-5">
               <div class="row">
                 <div class="col"> 
-                  <h4 class="gsa-medium-blue m-0 py-2 border-bottom">
-                    <strong>Register, apply, and sell to the federal government.</strong>
+                  <h4 class="gsa-medium-blue m-0 py-2 border-bottom text-center">
+                    <strong>Register, Apply, and Sell to the Federal Government.</strong>
                   </h4>                  
                 </div>
               </div>
@@ -102,7 +102,7 @@
             <div class="col-6 col-sm-4 col-md-3 col-lg-3 mb-4">
               <div class="p-2 mb-3 h-100 text-center">  
                 <span class="gsa-red h4 ml-1">
-                    <i><strong>SAM</strong></i>
+                    <strong>SAM</strong>
                 </span>
                 <p class="small">Register and Start Doing Business with the Federal Government</p>
                 <a class="btn btn-outline-primary btn-sm">Learn More</a>
@@ -112,8 +112,8 @@
           <div class="col-6 col-sm-4 col-md-3 col-lg-3 mb-4">
             <div class="p-2 mb-3 h-100 text-center">  
               <span class="gsa-red h4 ml-1">
-                  <i><strong>Offer Portal</strong></i>
-                  
+                  <strong>Offer Portal</strong>
+
               </span>
               <p class="small">Prepare and Submit your Product or Service Offerings</p>
               <a class="btn btn-outline-primary btn-sm">Learn More</a>
@@ -123,7 +123,7 @@
           <div class="col-6 col-sm-4 col-md-3 col-lg-3 mb-4">
             <div class="p-2 mb-3 h-100 text-center">  
               <span class="gsa-red h4 ml-1">
-                  <i><strong>PO Portal</strong></i>
+                  <strong>PO Portal</strong>
               </span>
               <p class="small">Access Purchase Orders Placed by Federal Agencies</p>
               <a class="btn btn-outline-primary btn-sm">Learn More</a>
@@ -133,7 +133,7 @@
           <div class="col-6 col-sm-4 col-md-3 col-lg-3 mb-4">
             <div class="p-2 mb-3 h-100 text-center">  
               <span class="gsa-red h4 ml-1">
-                  <i><strong>FAS Sales Reporting</strong></i>
+                  <strong>FAS Sales Reporting</strong>
               </span>
               <p class="small">Collect, Generate, and Review Sales Reports</p>
               <a class="btn btn-outline-primary btn-sm">Learn More</a>
