--- a/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
@@ -1,3 +1,5 @@
+<app-organization-details-banner></app-organization-details-banner>
+
 <section class="bg-gsa-light-grey">
     <div class="container-fluid px-5 py-5">
         <div class="row content-row pb-3">
