--- a/src/app/modules/supplier-portal/views/org-selection/org-selection.component.html
+++ b/src/app/modules/supplier-portal/views/org-selection/org-selection.component.html
@@ -5,7 +5,7 @@
                 <div class="mb-3 ">
                     <h2>
                         <small class=" font-weight-bold  gsa-xlight-blue">
-                            <div class="fal fa-project-diagram"></div> Supplier Portal
+                            <div class="fal fa-project-diagram"></div> Offer Portal
                         </small>
                     </h2>
                 </div>
