--- a/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
+++ b/src/app/modules/supplier-portal/views/supplier-portal-home/supplier-portal-home.component.html
@@ -1,3 +1,5 @@
+<app-organization-details-banner></app-organization-details-banner>
+
 <div class="container py-5">
     <div class="row">
         <div class="card shadow col mb-4">
